force-app/main/default/objects/AcctPlanWalletByDomain__c/AcctPlanWalletByDomain__c.object-meta.xml
<CustomObject>
    <label>Account Plan Wallet By Domain</label>
    <nameField>
        <displayFormat>WD-{000000}</displayFormat>
        <label>Account Plan Wallet By Domain Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Wallet By Domain</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>