force-app/main/default/objects/AcctPlanWalletByDomain__c/fields/AcctPlanWallet__c.field-meta.xml
<CustomField>
    <fullName>AcctPlanWallet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan Wallet</label>
    <referenceTo>AcctPlanWallet__c</referenceTo>
    <relationshipLabel>Account Plan Wallet By Domain</relationshipLabel>
    <relationshipName>Account_Plan_Wallet_By_Domain</relationshipName>
    <type>Lookup</type>
</CustomField>