force-app/main/default/objects/AcctPlanWalletByDomain__c/fields/AdjWalletUnit__c.field-meta.xml
<CustomField>
    <fullName>AdjWalletUnit__c</fullName>
    <description>Wallet Amount as calculated from Step 3</description>
    <inlineHelpText>Wallet Amount as calculated from Step 3</inlineHelpText>
    <label>AdjWalletUnit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>