force-app/main/default/objects/AcctPlanWalletByDomain__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Domain</label>
    <length>100</length>
    <type>Text</type>
</CustomField>