force-app/main/default/objects/AcctPlanWalletByDomain__c/fields/Row__c.field-meta.xml
<CustomField>
    <fullName>Row__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Row</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>