force-app/main/default/objects/AcctPlanWalletByDomain__c/fields/Seq__c.field-meta.xml
<CustomField>
    <fullName>Seq__c</fullName>
    <defaultValue>0</defaultValue>
    <description>เอาไว้เรียงลำดับ</description>
    <label>Seq</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>