force-app/main/default/objects/AcctPlanWalletByDomain__c/fields/SubDomain__c.field-meta.xml
<CustomField>
    <fullName>SubDomain__c</fullName>
    <description>Sub Domain</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Sub Domain</inlineHelpText>
    <label>SubDomain</label>
    <length>100</length>
    <type>Text</type>
</CustomField>