force-app/main/default/objects/AcctPlanWalletByDomain__c/fields/TypeOfNI__c.field-meta.xml
<CustomField>
    <fullName>TypeOfNI__c</fullName>
    <description>Type of NI</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Type of NI</inlineHelpText>
    <label>TypeOfNI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>