force-app/main/default/objects/AcctPlanWalletByDomain__c/fields/WalletDomain__c.field-meta.xml
<CustomField>
    <fullName>WalletDomain__c</fullName>
    <description>Domain</description>
    <inlineHelpText>Domain</inlineHelpText>
    <label>WalletDomain</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>