force-app/main/default/objects/AcctPlanWalletByDomain__c/fields/WalletFieldName__c.field-meta.xml
<CustomField>
    <fullName>WalletFieldName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WalletFieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>