force-app/main/default/objects/AcctPlanWalletByDomain__c/fields/WalletFromCRMDB__c.field-meta.xml
<CustomField>
    <fullName>WalletFromCRMDB__c</fullName>
    <label>WalletFromCRMDB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>